configuration mailer + test dans auth/register

--- a/.env
+++ b/.env
@@ -5,3 +5,14 @@ MYSQL_DB_PASSWORD=
 MYSQL_DB_HOST=localhost
 MYSQL_DB_PORT=3306
 MYSQL_DB_DATABASE=immohabitat
+
+
+##mailtrap
+
+ M_HOST='sandbox.smtp.mailtrap.io'
+ M_PORT=2525
+ M_USER='03fe99eaaba3d6'
+ M_PASS='653d568849f19f'
+
+ ##Mail from
+ M_FROM="wetterene.remy@gmail.com"
