--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "handlebars": "^4.7.7",
     "mysql2": "^3.3.2",
+    "nodemailer": "^6.9.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "slugify": "^1.6.6",
-    "typeorm": "^0.3.16",
-    "bcrypt": "^5.1.0"
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -43,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/nodemailer": "^6.4.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
