--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "module": "^1.2.5",
     "mysql2": "^3.3.2",
@@ -48,6 +49,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/nodemailer": "^6.4.8",
