ajout step5 image en cours + geomodule

--- a/.env
+++ b/.env
@@ -17,6 +17,9 @@ MYSQL_DB_DATABASE=immohabitat
  ##Mail from
  M_FROM="wetterene.remy@gmail.com"
 
+#api_geo_key
+
+GEO_KEY="a6093550db764df6a7440009d440a223"
 
  #SECRET_TOKEN_KEY
 
