--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
@@ -28,14 +29,19 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
+    "i": "^0.3.7",
     "module": "^1.2.5",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.2",
+    "nestjs-form-data": "^1.8.7",
     "nodemailer": "^6.9.2",
+    "npm": "^9.6.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -51,6 +57,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
     "@types/jest": "29.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.15.11",
     "@types/nodemailer": "^6.4.8",
     "@types/passport": "^1.0.12",
